# app/docs/swagger/swagger.json
@@ -87,7 +87,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "int"
+                            "$ref": "#/definitions/order.postOrderResponse"
                         }
                     }
                 }
@@ -214,6 +214,14 @@
                 },
                 "quantity": {
                     "type": "integer"
+                }
+            }
+        },
+        "order.postOrderResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
                 }
             }
         },
